test/libsolidity/syntaxTests/modifiers/modifier_without_underscore.sol
contract test {
    modifier m() {}
}
// ----
// SyntaxError 2883: (33-35): Modifier body does not contain '_'.
